tests/passing/lex_unicode_string.tails
func tests() -> unit:
  let a = "â­"
