tests/failing/lex_unicode_unsupported.tails
func tests() -> unit:
  let â­ = 123
